# xarm6_ros

./: README.md
xarm6_gripper_moveit_config/: CMakeLists.txt  package.xml
xarm6_gripper_moveit_config/config/: kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml
xarm6_gripper_moveit_config/launch/: move_group.launch  moveit.rviz  moveit_rviz_common.launch  multi_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_pipeline.launch.xml  stomp_planning_pipeline.launch.xml
xarm6_gripper_moveit_config/src/: angle.txt  opt.cpp  req.cpp  stomp_origin.cpp  stomp_req.cpp
xarm6_moveit_config/config/: stomp_planning.yaml
xarm6_moveit_config/launch/: stomp_planning_pipeline.launch.xml
xarm_gazebo/launch/: xarm6_beside_table.launch
